--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #202124;
 }
 
 h1,
@@ -11,7 +10,7 @@ h2,
 h3,
 input,
 button {
-  font-family: 'Press Start 2P', system-ui;
+  font-family: 'Montserrat', system-ui;
 }
 
 #root {
@@ -19,7 +18,7 @@ button {
   display: flex;
   flex-direction: column;
   padding: 14px;
-  background: #eff6ff;
+  background: black;
   gap: 14px;
 }
 
@@ -102,6 +101,11 @@ p {
   opacity: 0.7;
 }
 
+.logo {
+  width: 60%;
+  height: auto;
+  margin: 0 auto;
+}
 
 
 @media (min-width: 640px) {
